Adding default ZEPPELIN_MEM env variable